# CAGE

./: .gitignore  Makefile  README.md
admin-tui/: build.sh  go.mod  main.go
api/: openapi.yaml
cli/: Cargo.toml  build.sh
cli/src/: main.rs
deployment/: docker-compose.yml
deployment/docker-compose/: .env.example
deployment/haproxy/: haproxy.cfg
deployment/kubernetes/: README.md  deployment.yaml  hpa.yaml  secrets.yaml
deployment/nginx/: nginx.conf
deployment/systemd/: README.md  cage-orchestrator.service
examples/: jupyter_test.py  mcp_client.py
monitoring/grafana/: cage-dashboard.json
orchestrator/: Cargo.toml  Dockerfile
orchestrator/src/: lib.rs  main.rs
orchestrator/src/alerts/: mod.rs
orchestrator/src/analysis/: mod.rs
orchestrator/src/api/: auth.rs  error.rs  mod.rs
orchestrator/src/api/handlers/: admin.rs  execute.rs  files.rs  health.rs  logs.rs  mod.rs  packages.rs  replay.rs  session.rs
orchestrator/src/audit/: mod.rs
orchestrator/src/config/: mod.rs
orchestrator/src/container/: executor.rs  manager.rs  mod.rs  session.rs
orchestrator/src/distributed/: mod.rs
orchestrator/src/gvisor/: mod.rs
orchestrator/src/jaeger/: mod.rs
orchestrator/src/jobs/: mod.rs
orchestrator/src/logging/: mod.rs
orchestrator/src/mcp/: handler.rs  mod.rs
orchestrator/src/metrics/: mod.rs
orchestrator/src/models/: mod.rs
orchestrator/src/network/: mod.rs
orchestrator/src/opa/: mod.rs
orchestrator/src/persistent/: kernel.rs  mod.rs
orchestrator/src/proxy/: mod.rs
orchestrator/src/ratelimit/: mod.rs
orchestrator/src/reload/: mod.rs
orchestrator/src/replay/: mod.rs
orchestrator/src/signing/: mod.rs
orchestrator/src/tty/: mod.rs
orchestrator/src/usermgmt/: mod.rs
orchestrator/src/vault/: mod.rs
sandbox/: Containerfile  build.sh  requirements.txt  seccomp.json
sandbox-go/: Containerfile  build.sh
sandbox-julia/: Containerfile  build.sh
sandbox-r/: Containerfile  build.sh
sandbox-ruby/: Containerfile  build.sh
sandbox-typescript/: Containerfile  build.sh
sandbox-wasm/: Containerfile  build.sh
scripts/: quick-start.sh
sdk/go/: client.go  go.mod
sdk/javascript/: README.md  package-lock.json  package.json  test.js
sdk/javascript/src/: index.ts
sdk/python/: README.md  setup.py
sdk/python/cage/: __init__.py  client.py  mcp.py
tests/: COMPREHENSIVE_FINAL_TEST.sh  integration_test.sh  test_all_languages.sh  test_python_sdk.py
tests/go-sdk-test/: go.mod  test.go
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
