[package]
name = "cage-orchestrator"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["CAGE Project"]
description = "Secure sandboxed code execution orchestrator for LLM agents"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "process", "signal"] }

# Web framework
axum = { version = "0.7", features = ["multipart", "macros", "json", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "fs"] }
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async traits and utilities
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Security - password hashing and JWT
argon2 = "0.5"
jsonwebtoken = "9.2"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"

# HTTP client (for Podman API if needed)
reqwest = { version = "0.11", features = ["json", "stream"] }

# File operations
tokio-util = { version = "0.7", features = ["io"] }
tempfile = "3.9"
walkdir = "2.4"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Container interaction
bollard = "0.15"  # Docker/Podman API client

# Utilities
which = "6.0"
mime_guess = "2.0"
once_cell = "1.19"
libc = "0.2"
regex = "1.10"

# Redis for distributed state
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
mockall = "0.12"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lib]
name = "cage_orchestrator"
path = "src/lib.rs"

[[bin]]
name = "cage-orchestrator"
path = "src/main.rs"
